[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["youngy-rag-llm-project"]  # package names should match these glob patterns (["*"] by default)
exclude = ["images", "issues", "data"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "youngy-rag-llm-project"
version = "0.0.1"
authors = [
  { name="youngyoony", email="yoon.keunyoung.yky@gmail.com" },
]
description = "Youngy package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.22.0",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/youngyoony/rag-llm-project"
"Bug Tracker" = "https://github.com/youngyoony/rag-llm-project/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]
